<resources>
  <string name="app_name">Indonesia Investor Club</string>
  <string name="email_support">support@investorclub.id</string>
  <string name="website">https://www.investorclub.id</string>

  <string name="label_login">Sign in</string>
  <string name="hint_register">Anda belum memiliki akun?</string>
  <string name="hint_login">Anda sudah memiliki akun?</string>
  <string name="label_register">Sign up</string>
  <string name="label_profile_edit_proses">Update</string>
  <string name="label_profile_edit">Edit Profile</string>
  <string name="label_email">Email</string>
  <string name="label_website">Website</string>
  <string name="label_invest_funds">Invest Funds</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="label_ok">OK</string>

  <string name="menu_home">Home</string>
  <string name="menu_about">About</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Send</string>
  <string name="menu_login">Login</string>
  <string name="menu_logout">Logout</string>
  <string name="menu_lounge">Lounge</string>
  <string name="menu_profile">Profile</string>
  <string name="menu_agreement">Agreement</string>
  <string name="menu_network">Network</string>
  <string name="menu_commission">Commission</string>
  <string name="menu_performance">Performance</string>
  <string name="menu_portfolio">Portfolio</string>
  <string name="menu_invest">Invest</string>
  <string name="menu_funds">Funds</string>
  <string name="menu_transactions">Transactions</string>
  <string name="menu_funds_user">User</string>

  <string name="label_username">Username</string>
  <string name="label_password">Password</string>

  <string name="profile_first_name">First Name</string>
  <string name="profile_last_name">Last Name</string>
  <string name="profile_name">Name</string>

  <string name="personal_info">Personal Info</string>
  <string name="user_info">User Info</string>
  <string name="charts_info">IIC FX 1</string>

  <string name="id_label">ID Number</string>
  <string name="ref_label">Referral Code</string>
  <string name="email_label">E-mail</string>
  <string name="sponsor_label">Sponsor</string>
  <string name="network_label">Network</string>
  <string name="group_label">Group</string>
  
  <string name="first_name_label">First Name</string>
  <string name="last_name_label">Last Name</string>
  <string name="dob_label">DoB</string>
  <string name="marital_status_label">Marital Status</string>
  <string name="address_label">Alamat</string>
  <string name="postal_code_label">Kode POS</string>
  <string name="gender_label">Jenis Kelamin</string>
  <string name="nationality_label">Kebangsaan</string>
  <string name="city_label">Kota</string>
  <string name="country_label">Negara</string>
  <string name="occupation_label">Pekerjaan</string>
  <string name="phone_number_label">No. Telepon</string>

  <string name="bank_info">Bank Info</string>
  <string name="bank_name_label">Name</string>
  <string name="bank_accname_label">AccName</string>
  <string name="bank_accno_label">AccNo</string>
  <string name="bank_branch_label">Branch</string>
  <string name="bank_address_label">Address</string>
  <string name="bank_swiftcode_label">SwiftCode</string>
  <string name="bank_status_label">Status</string>

  <string name="personal_info_proof_id">Proof of ID</string>
  <string name="personal_info_proof_bank">Proof of Bank</string>

  <string name="personal_info_pick_image_profile">Pick an image from gallery</string>
  <string name="personal_info_pick_image_proof_of_id">Pick Image Gallery Proof Of ID</string>
  <string name="personal_info_pick_image_proof_of_bank">Pick Image Gallery Proof Of Bank</string>
  <string name="personal_info_pick_image_transfer">Pick Image Gallery Transfer</string>

  <string name="registration_ref_label">Referral Code</string>
  <string name="registration_first_name_label">First Name</string>
  <string name="registration_last_name_label">Last Name</string>
  <string name="registration_mobile_phone_label">Mobile Phone</string>
  <string name="registration_email_label">Email</string>
  <string name="registration_password_label">Password</string>
  <string name="registration_retype_password_label">Retype Password</string>

  <string name="invested_label">Invested</string>
  <string name="profit_label">Profit</string>
  <string name="roi_label">ROI</string>

  <string name="tweets_label">Tweets</string>

  <string name="funds_label">Funds</string>
  <string name="funds_type_label">Type</string>
  <string name="funds_manager_label">Manager</string>
  <string name="funds_your_invest_label">Your Invest</string>
  <string name="funds_equity_progress_label">Equity Progress</string>
  <string name="funds_slots_label">Slots</string>
  <string name="funds_roi_label">Est. ROI</string>
  <string name="funds_compounding_label">Compounding</string>
  <string name="funds_meta_label">META INFO</string>
  <string name="funds_acc_no_label">Acc. No.</string>
  <string name="funds_investor_pass_label">Investor Pass</string>
  <string name="funds_server_label">Server</string>
  <string name="funds_usdidr_label">USDIDR</string>
  <string name="funds_bank_name_label">Bank Name</string>
  <string name="funds_bank_accname_label">Bank Acc.Name</string>
  <string name="funds_bank_accno_label">Bank Acc.No</string>

  <string name="funds_user_date_label">Date</string>
  <string name="funds_user_id_label">UserID</string>
  <string name="funds_user_name_label">Name</string>
  <string name="funds_user_invest_label">Invest</string>
  <string name="funds_user_status_id_label">StatusID</string>
  <string name="funds_user_status_label">Status</string>
  <string name="funds_user_wd_id_label">WdID</string>

  <string name="perlots_usd_label">PerLots (USD)</string>
  <string name="invest_usd_label">Invest (USD)</string>
  <string name="commission_usd_label">Commission (USD)</string>
  <string name="invest_idr_label">Invest (IDR)</string>
  <string name="commission_idr_label">Commission (IDR)</string>
  <string name="profit_usd_label">Profit (USD)</string>
  <string name="profit_idr_label">Profit (IDR)</string>
  <string name="usdidr_label">USDIDR</string>

  <string name="invest_slot">Slot</string>
  <string name="invest_button">Invest</string>
  <string name="invest_usd_value">"@ 500"</string>
  <string name="invest_idr_value">Rp. 6.000.000</string>
  <string name="invest_value">"@ 500 / Rp. 6.000.000"</string>
  <string name="invest_text_title_total">Total</string>
  <string name="invest_usd_total">USD</string>
  <string name="invest_idr_total">IDR</string>
  <string name="invest_text_usd_total">00</string>
  <string name="invest_text_idr_total">Rp. 00</string>

  <string name="network_name_label">Name</string>
  <string name="lots_invest_label">IIC FX 1 :</string>

  <string name="overview_label">Overview</string>

  <string name="invest_labels">Invest</string>
  <string name="profit_labels">Profit</string>

  <string name="this_pages_label">0</string>
  <string name="of_pages_label">0</string>
  <string name="of_pages">Of</string>

  <string name="invest_date_transaction_label">Invest Date</string>
  <string name="invest_usd_transaction_label">Invest USD</string>
  <string name="invest_idr_transaction_label">Invest IDR</string>
  <string name="dp_date_transaction_label">DP Date</string>
  <string name="dp_amount_transaction_label">DP Amount</string>
  <string name="dp_id_transaction_label">DP ID</string>
  <string name="dp_status_transaction_label">DP Status</string>
  <string name="dp_proof_transaction_label">DP Proof</string>
  <string name="start_date_transaction_label">Start Date</string>
  <string name="end_date_transaction_label">End Date</string>
  <string name="start_end_date_transaction_label">Start Date - End Date</string>
  <string name="status_transaction_label">Status</string>
  <string name="wd_date_transaction_label">WD Date</string>
  <string name="wd_amount_transaction_label">WD Amount</string>
  <string name="wd_id_transaction_label">WD ID</string>
  <string name="wd_status_transaction_label">WD Status</string>
  <string name="wd_start_end_date_transaction_label">WD Start - WD End</string>

  <string name="performance_ytd_label">Year to Date</string>
  <string name="performance_year_label">Year</string>

  <string name="about_app">ABOUT INVESTORCLUB</string>

  <string name="minus">-</string>
  <string name="edit_label">Edit</string>
  <string name="edit_first_name_label">First Name</string>
  <string name="edit_last_name_label">Last Name</string>
  <string name="edit_dob_label">Date Of Birth</string>
  <string name="edit_gender_label">Gender</string>
  <string name="edit_marital_status_label">Marital Status</string>
  <string name="edit_nationality_label">Nationality</string>
  <string name="edit_address_label">Address</string>
  <string name="edit_city_label">City</string>
  <string name="edit_postal_code_label">Postal Code</string>
  <string name="edit_country_label">Country</string>
  <string name="edit_phone_number_label">Phone Number</string>
  <string name="edit_occupation_label">Occupation</string>

  <string name="year_label">YEAR</string>
  <string name="january_label">JAN</string>
  <string name="february_label">FEB</string>
  <string name="march_label">MAR</string>
  <string name="april_label">APR</string>
  <string name="may_label">MAY</string>
  <string name="june_label">JUN</string>
  <string name="july_label">JUL</string>
  <string name="august_label">AUG</string>
  <string name="september_label">SEP</string>
  <string name="ocktober_label">OCT</string>
  <string name="november_label">NOV</string>
  <string name="december_label">DEC</string>
  <string name="ytd_label">YTD</string>

  <string name="participant_label">Participant</string>
  <string name="previous_label">Previous</string>
  <string name="current_label">Current</string>

  <string name="more_info_label">MORE INFO</string>
  <string name="invest_label">INVEST</string>

  <string name="about_label">About Us</string>

  <string name="button_request_wd_label">Request WD</string>
  <string name="button_upload_bukti_transfer_label">Upload Bukti Transfer</string>
  <string name="button_upload_image">Upload</string>

  <string name="label_downline">Downline</string>
  <string name="hint_no_downline">User belum mempunyai downline</string>
  <string name="news_feed">News Feed</string>
</resources>
