<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <variable
        name="viewModel"
        type="com.project.indonesiainvestorclub.viewModels.HomeViewModel"
        />

    <import type="android.view.View" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/light_background_list"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/dashboard_tile"
          android:layout_width="0dp"
          android:layout_height="200dp"
          android:scaleType="fitXY"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/background_primary_gradient"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{viewModel.titlePerformance}"
          android:textSize="24sp"
          android:textStyle="bold"
          android:textColor="@android:color/white"
          tools:text="ICX II"
          android:paddingLeft="20dp"
          android:paddingStart="20dp"
          android:paddingRight="0dp"
          android:paddingEnd="0dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@id/horizontal_table_view"/>

      <HorizontalScrollView
          android:id="@+id/horizontal_table_view"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginTop="130dp"
          android:overScrollMode="never"
          android:scrollbars="none"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="50dp"
              android:layout_marginStart="12dp"
              android:layout_marginEnd="12dp"
              android:orientation="horizontal"
              >

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/year_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/january_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/february_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/march_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/april_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/may_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/june_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/july_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/august_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/september_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/ocktober_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/november_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/december_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="15dp"
                android:text="@string/ytd_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                />

          </LinearLayout>

          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/table_performance"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:nestedScrollingEnabled="true"
              tools:itemCount="10"
              tools:listitem="@layout/sub_performance_table"
              tools:targetApi="lollipop"
              />

        </LinearLayout>

      </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.loadingState ? View.VISIBLE : View.GONE}"
        tools:visibility="gone"
        >

      <androidx.core.widget.ContentLoadingProgressBar
          style="?android:attr/progressBarStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          />

    </FrameLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>