<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <variable
        name="viewModel"
        type="com.project.indonesiainvestorclub.viewModels.MainViewModel"
        />

    <import type="android.view.View"/>
  </data>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:background="@drawable/side_nav_bar"
      android:gravity="bottom"
      android:orientation="vertical"
      android:padding="20dp"
      android:theme="@style/ThemeOverlay.AppCompat.Dark"
      >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{viewModel::signupScreen}"
        android:text="@string/label_register"
        android:visibility="@{viewModel.signupState ? View.GONE : View.VISIBLE}"
        android:layout_gravity="center|end"
        tools:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{viewModel::loginScreen}"
        android:text="@string/label_login"
        android:visibility="@{viewModel.loginState ? View.GONE : View.VISIBLE}"
        android:layout_gravity="center|end"
        tools:visibility="gone"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="@{viewModel.loginState ? View.VISIBLE : View.GONE}"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="@{viewModel.loginState ? View.VISIBLE : View.GONE}"
        android:text="@{viewModel.name}"
        tools:text="dummy dummy"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginBottom="2dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="@{viewModel.loginState ? View.VISIBLE : View.GONE}"
        android:text="@{viewModel.email}"
        tools:text="dummy123@gmail.com"
        />

  </LinearLayout>

</layout>

